--- a/WebContent/home.html
+++ b/WebContent/home.html
@@ -13,7 +13,7 @@
   <header class="backdrop-blur bg-white/80 dark:bg-neutral-900/80 border-b border-neutral-200 dark:border-neutral-800 sticky top-0 z-30">
     <div class="max-w-5xl mx-auto flex items-center justify-between px-4 py-3">
       <div class="flex items-center gap-4">
-        <span class="font-bold text-xl tracking-tight">AI Prompts</span>
+        <a href="index.html" class="font-bold text-xl tracking-tight">AI Prompts</a>
         <nav class="hidden md:flex gap-6 text-base">
           <a href="home.html" class="text-blue-600 font-semibold" data-i18n="home">首页</a>
           <a href="prompts.html" class="hover:text-blue-600" data-i18n="prompts">提示词</a>
@@ -22,11 +22,14 @@
         </nav>
       </div>
       <div class="flex items-center gap-2">
-        <button onclick="toggleTheme()" class="rounded px-2 py-1 hover:bg-neutral-100 dark:hover:bg-neutral-800" title="切换明暗模式">
-          <svg class="w-5 h-5" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path d="M12 3v1m0 16v1m8.66-13.66l-.71.71M4.05 19.07l-.71.71M21 12h-1M4 12H3m16.66 5.66l-.71-.71M4.05 4.93l-.71-.71"/><circle cx="12" cy="12" r="5"/></svg>
+        <button id="theme-toggle" onclick="toggleTheme()" class="rounded px-2 py-1 hover:bg-neutral-100 dark:hover:bg-neutral-800" title="切换明暗模式">
+          <span id="theme-icon">🌞</span>
         </button>
-        <button onclick="toggleLang()" class="rounded px-2 py-1 hover:bg-neutral-100 dark:hover:bg-neutral-800" title="切换语言">
-          <svg class="w-5 h-5" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path d="M12 3v18m9-9H3"/></svg>
+        <button id="lang-toggle" onclick="toggleLang()" class="rounded px-2 py-1 hover:bg-neutral-100 dark:hover:bg-neutral-800" title="切换语言">
+          <span id="lang-icon">中/En</span>
+        </button>
+        <button id="settings-toggle" onclick="location.href='settings.html'" class="rounded px-2 py-1 hover:bg-neutral-100 dark:hover:bg-neutral-800" title="设置">
+          <span id="settings-icon">⚙️</span>
         </button>
       </div>
     </div>
@@ -56,15 +59,32 @@
     <section>
       <h2 class="text-2xl font-semibold mb-4">分类入口</h2>
       <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
-        <a href="prompts.html#chatgpt" class="rounded-lg bg-blue-100 dark:bg-blue-900 text-blue-800 dark:text-blue-200 px-4 py-3 font-medium text-center hover:scale-105 transition">ChatGPT</a>
-        <a href="prompts.html#midjourney" class="rounded-lg bg-purple-100 dark:bg-purple-900 text-purple-800 dark:text-purple-200 px-4 py-3 font-medium text-center hover:scale-105 transition">Midjourney</a>
-        <a href="prompts.html#claude" class="rounded-lg bg-green-100 dark:bg-green-900 text-green-800 dark:text-green-200 px-4 py-3 font-medium text-center hover:scale-105 transition">Claude</a>
-        <a href="prompts.html#notionai" class="rounded-lg bg-yellow-100 dark:bg-yellow-900 text-yellow-800 dark:text-yellow-200 px-4 py-3 font-medium text-center hover:scale-105 transition">NotionAI</a>
+        <a href="prompts.html#chatgpt" class="rounded-lg bg-pink-500 dark:bg-pink-700 text-white px-4 py-3 font-medium text-center hover:scale-105 transition">ChatGPT</a>
+        <a href="prompts.html#claude" class="rounded-lg bg-orange-400 dark:bg-orange-600 text-white px-4 py-3 font-medium text-center hover:scale-105 transition">Claude</a>
+        <a href="prompts.html#midjourney" class="rounded-lg bg-purple-500 dark:bg-purple-700 text-white px-4 py-3 font-medium text-center hover:scale-105 transition">Midjourney</a>
+        <a href="prompts.html#dall-e" class="rounded-lg bg-teal-400 dark:bg-teal-600 text-white px-4 py-3 font-medium text-center hover:scale-105 transition">DALL-E</a>
+        <a href="prompts.html#notionai" class="rounded-lg bg-yellow-400 dark:bg-yellow-600 text-white px-4 py-3 font-medium text-center hover:scale-105 transition">NotionAI</a>
+        <a href="prompts.html#tiangong" class="rounded-lg bg-cyan-400 dark:bg-cyan-600 text-white px-4 py-3 font-medium text-center hover:scale-105 transition">Tiangong</a>
+        <a href="prompts.html#veo3" class="rounded-lg bg-lime-500 dark:bg-lime-700 text-white px-4 py-3 font-medium text-center hover:scale-105 transition">Veo3</a>
+        <a href="prompts.html#gemini" class="rounded-lg bg-blue-400 dark:bg-blue-600 text-white px-4 py-3 font-medium text-center hover:scale-105 transition">Gemini</a>
+        <a href="prompts.html#cursor" class="rounded-lg bg-rose-400 dark:bg-rose-600 text-white px-4 py-3 font-medium text-center hover:scale-105 transition">Cursor</a>
+        <a href="prompts.html#copilot" class="rounded-lg bg-green-500 dark:bg-green-700 text-white px-4 py-3 font-medium text-center hover:scale-105 transition">Copilot</a>
+        <a href="prompts.html#jasper" class="rounded-lg bg-fuchsia-500 dark:bg-fuchsia-700 text-white px-4 py-3 font-medium text-center hover:scale-105 transition">Jasper</a>
+        <a href="prompts.html#grok" class="rounded-lg bg-red-400 dark:bg-red-600 text-white px-4 py-3 font-medium text-center hover:scale-105 transition">Grok</a>
+        <a href="prompts.html#stablediffusion" class="rounded-lg bg-indigo-500 dark:bg-indigo-700 text-white px-4 py-3 font-medium text-center hover:scale-105 transition">StableDiffusion</a>
+        <a href="prompts.html#trea" class="rounded-lg bg-amber-400 dark:bg-amber-600 text-white px-4 py-3 font-medium text-center hover:scale-105 transition">Trea</a>
+        <a href="prompts.html#example示例" class="rounded-lg bg-violet-500 dark:bg-violet-700 text-white px-4 py-3 font-medium text-center hover:scale-105 transition">Example:示例</a>
       </div>
     </section>
   </main>
   <footer class="mt-16 py-6 text-center text-neutral-500 text-sm border-t border-neutral-200 dark:border-neutral-800">
-    &copy; 2024 AI Prompts. Inspired by <a href="https://prompts.chat/" class="text-blue-500 hover:underline">prompts.chat</a> | <a href="about.html" class="hover:underline" data-i18n="about">关于</a>
+    © 2025 AI Prompts. 
+    <a href="https://github.com/ThineLord" class="inline-flex items-center gap-1 text-blue-500 hover:underline" target="_blank" rel="noopener noreferrer" style="vertical-align: middle;">
+      <svg class="inline w-4 h-4" fill="currentColor" viewBox="0 0 24 24"><path d="M12 0C5.37 0 0 5.373 0 12c0 5.303 3.438 9.8 8.205 11.387.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.726-4.042-1.61-4.042-1.61-.546-1.387-1.333-1.756-1.333-1.756-1.09-.745.083-.729.083-.729 1.205.085 1.84 1.237 1.84 1.237 1.07 1.834 2.807 1.304 3.492.997.108-.775.418-1.305.762-1.606-2.665-.305-5.466-1.334-5.466-5.931 0-1.31.468-2.381 1.236-3.221-.124-.303-.535-1.523.117-3.176 0 0 1.008-.322 3.3 1.23a11.52 11.52 0 0 1 3.003-.404c1.02.005 2.047.138 3.003.404 2.291-1.553 3.297-1.23 3.297-1.23.653 1.653.242 2.873.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.803 5.624-5.475 5.921.43.372.823 1.102.823 2.222 0 1.606-.014 2.898-.014 3.293 0 .321.218.694.825.576C20.565 21.796 24 17.299 24 12c0-6.627-5.373-12-12-12z"/></svg>
+      ThineLord
+    </a>
+    Inspired by <a href="https://prompts.chat/" class="text-blue-500 hover:underline">prompts.chat</a> |
+    <a href="about.html" class="hover:underline" data-i18n="about">关于</a>
   </footer>
 </body>
 </html> 
