删除联系页面并将其内容整合到关于页面中，同时在多个页面的导航栏中添加分类链接以提升用户体验。

--- a/WebContent/about.html
+++ b/WebContent/about.html
@@ -16,9 +16,9 @@
         <a href="index.html" class="font-bold text-xl tracking-tight">AI Prompts</a>
         <nav class="hidden md:flex gap-6 text-base">
           <a href="home.html" class="hover:text-blue-600" data-i18n="home">首页</a>
+          <a href="category.html" class="hover:text-blue-600" data-i18n="category">分类</a>
           <a href="prompts.html" class="hover:text-blue-600" data-i18n="prompts">提示词</a>
           <a href="about.html" class="text-blue-600 font-semibold" data-i18n="about">关于</a>
-          <a href="contact.html" class="hover:text-blue-600" data-i18n="contact">联系我们</a>
         </nav>
       </div>
       <div class="flex items-center gap-2">
@@ -42,6 +42,17 @@
         <p class="mb-2">本项目致力于收集和整理各大AI平台的优质提示词，帮助用户高效使用AI工具，灵感来源于 <a href="https://prompts.chat/" class="text-blue-600 hover:underline">prompts.chat</a>。</p>
         <p class="mb-2">界面设计参考苹果公司风格，支持明暗模式和中英文切换，适配多终端。</p>
         <p>欢迎贡献和反馈，共同完善AI提示词生态！</p>
+      </div>
+    </section>
+    <section class="mb-12">
+      <h1 class="text-3xl md:text-4xl font-bold mb-8" data-i18n="contact">联系我们</h1>
+      <div class="rounded-xl bg-neutral-100 dark:bg-neutral-800 p-6 shadow">
+        <h2 class="font-semibold mb-2">联系方式</h2>
+        <p class="mb-2">如有建议、合作或反馈，欢迎通过以下方式联系我们：</p>
+        <ul class="list-disc pl-6 text-neutral-700 dark:text-neutral-300">
+          <li>邮箱：<a href="mailto:ai-prompts@example.com" class="text-blue-600 hover:underline">ai-prompts@example.com</a></li>
+          <li>GitHub：<a href="https://github.com/hanzhiyou/Awesome-Prompts" class="text-blue-600 hover:underline">hanzhiyou/Awesome-Prompts</a></li>
+        </ul>
       </div>
     </section>
   </main>
