--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -16,9 +16,9 @@
         <a href="index.html" class="font-bold text-xl tracking-tight">AI Prompts</a>
         <nav class="hidden md:flex gap-6 text-base">
           <a href="home.html" class="hover:text-blue-600" data-i18n="home">首页</a>
+          <a href="category.html" class="hover:text-blue-600" data-i18n="category">分类</a>
           <a href="prompts.html" class="hover:text-blue-600" data-i18n="prompts">提示词</a>
           <a href="about.html" class="hover:text-blue-600" data-i18n="about">关于</a>
-          <a href="contact.html" class="hover:text-blue-600" data-i18n="contact">联系我们</a>
         </nav>
       </div>
       <div class="flex items-center gap-2">
