--- a/WebContent/prompts.html
+++ b/WebContent/prompts.html
@@ -16,9 +16,9 @@
         <a href="index.html" class="font-bold text-xl tracking-tight">AI Prompts</a>
         <nav class="hidden md:flex gap-6 text-base">
           <a href="home.html" class="hover:text-blue-600" data-i18n="home">首页</a>
+          <a href="category.html" class="hover:text-blue-600" data-i18n="category">分类</a>
           <a href="prompts.html" class="text-blue-600 font-semibold" data-i18n="prompts">提示词</a>
           <a href="about.html" class="hover:text-blue-600" data-i18n="about">关于</a>
-          <a href="contact.html" class="hover:text-blue-600" data-i18n="contact">联系我们</a>
         </nav>
       </div>
       <div class="flex items-center gap-2">
@@ -35,6 +35,26 @@
     </div>
   </header>
   <main class="flex-1 max-w-5xl mx-auto px-4 py-12">
+    <section class="mb-12">
+      <h2 class="text-2xl font-semibold mb-4">分类入口</h2>
+      <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
+        <a href="prompts.html#chatgpt" class="rounded-lg bg-pink-500 dark:bg-pink-700 text-white px-4 py-3 font-medium text-center hover:scale-105 transition">ChatGPT</a>
+        <a href="prompts.html#claude" class="rounded-lg bg-orange-400 dark:bg-orange-600 text-white px-4 py-3 font-medium text-center hover:scale-105 transition">Claude</a>
+        <a href="prompts.html#midjourney" class="rounded-lg bg-purple-500 dark:bg-purple-700 text-white px-4 py-3 font-medium text-center hover:scale-105 transition">Midjourney</a>
+        <a href="prompts.html#dall-e" class="rounded-lg bg-teal-400 dark:bg-teal-600 text-white px-4 py-3 font-medium text-center hover:scale-105 transition">DALL-E</a>
+        <a href="prompts.html#notionai" class="rounded-lg bg-yellow-400 dark:bg-yellow-600 text-white px-4 py-3 font-medium text-center hover:scale-105 transition">NotionAI</a>
+        <a href="prompts.html#tiangong" class="rounded-lg bg-cyan-400 dark:bg-cyan-600 text-white px-4 py-3 font-medium text-center hover:scale-105 transition">Tiangong</a>
+        <a href="prompts.html#veo3" class="rounded-lg bg-lime-500 dark:bg-lime-700 text-white px-4 py-3 font-medium text-center hover:scale-105 transition">Veo3</a>
+        <a href="prompts.html#gemini" class="rounded-lg bg-blue-400 dark:bg-blue-600 text-white px-4 py-3 font-medium text-center hover:scale-105 transition">Gemini</a>
+        <a href="prompts.html#cursor" class="rounded-lg bg-rose-400 dark:bg-rose-600 text-white px-4 py-3 font-medium text-center hover:scale-105 transition">Cursor</a>
+        <a href="prompts.html#copilot" class="rounded-lg bg-green-500 dark:bg-green-700 text-white px-4 py-3 font-medium text-center hover:scale-105 transition">Copilot</a>
+        <a href="prompts.html#jasper" class="rounded-lg bg-fuchsia-500 dark:bg-fuchsia-700 text-white px-4 py-3 font-medium text-center hover:scale-105 transition">Jasper</a>
+        <a href="prompts.html#grok" class="rounded-lg bg-red-400 dark:bg-red-600 text-white px-4 py-3 font-medium text-center hover:scale-105 transition">Grok</a>
+        <a href="prompts.html#stablediffusion" class="rounded-lg bg-indigo-500 dark:bg-indigo-700 text-white px-4 py-3 font-medium text-center hover:scale-105 transition">StableDiffusion</a>
+        <a href="prompts.html#trea" class="rounded-lg bg-amber-400 dark:bg-amber-600 text-white px-4 py-3 font-medium text-center hover:scale-105 transition">Trea</a>
+        <a href="prompts.html#example示例" class="rounded-lg bg-violet-500 dark:bg-violet-700 text-white px-4 py-3 font-medium text-center hover:scale-105 transition">Example:示例</a>
+      </div>
+    </section>
     <h1 class="text-3xl md:text-4xl font-bold mb-8" data-i18n="allPrompts">全部提示词</h1>
     <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
       <div class="rounded-xl bg-neutral-100 dark:bg-neutral-800 p-6 shadow hover:shadow-lg transition flex flex-col">
