--- a/WebContent/settings.html
+++ b/WebContent/settings.html
@@ -50,7 +50,13 @@
     </section>
   </main>
   <footer class="mt-16 py-6 text-center text-neutral-500 text-sm border-t border-neutral-200 dark:border-neutral-800">
-    &copy; 2024 AI Prompts. Inspired by <a href="https://prompts.chat/" class="text-blue-500 hover:underline">prompts.chat</a> | <a href="about.html" class="hover:underline" data-i18n="about">关于</a>
+    © 2025 AI Prompts. 
+    <a href="https://github.com/ThineLord" class="inline-flex items-center gap-1 text-blue-500 hover:underline" target="_blank" rel="noopener noreferrer" style="vertical-align: middle;">
+      <svg class="inline w-4 h-4" fill="currentColor" viewBox="0 0 24 24"><path d="M12 0C5.37 0 0 5.373 0 12c0 5.303 3.438 9.8 8.205 11.387.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.726-4.042-1.61-4.042-1.61-.546-1.387-1.333-1.756-1.333-1.756-1.09-.745.083-.729.083-.729 1.205.085 1.84 1.237 1.84 1.237 1.07 1.834 2.807 1.304 3.492.997.108-.775.418-1.305.762-1.606-2.665-.305-5.466-1.334-5.466-5.931 0-1.31.468-2.381 1.236-3.221-.124-.303-.535-1.523.117-3.176 0 0 1.008-.322 3.3 1.23a11.52 11.52 0 0 1 3.003-.404c1.02.005 2.047.138 3.003.404 2.291-1.553 3.297-1.23 3.297-1.23.653 1.653.242 2.873.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.803 5.624-5.475 5.921.43.372.823 1.102.823 2.222 0 1.606-.014 2.898-.014 3.293 0 .321.218.694.825.576C20.565 21.796 24 17.299 24 12c0-6.627-5.373-12-12-12z"/></svg>
+      ThineLord
+    </a>
+    Inspired by <a href="https://prompts.chat/" class="text-blue-500 hover:underline">prompts.chat</a> |
+    <a href="about.html" class="hover:underline" data-i18n="about">关于</a>
   </footer>
 </body>
 </html> 
