更新关于页面，移除界面设计描述并更改联系邮箱为新的 Gmail 地址；更新分类页面，添加国际化支持，修改标题和分类链接以便于多语言切换；更新语言文件，添加分类及各个提示词的翻译。

--- a/WebContent/category.html
+++ b/WebContent/category.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>全部分类 - AI提示词大全</title>
+  <title data-i18n="allCategories">全部分类 - AI提示词大全</title>
   <link href="assets/css/tailwind.css" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="assets/js/theme.js" defer></script>
@@ -35,23 +35,23 @@
     </div>
   </header>
   <main class="flex-1 max-w-5xl mx-auto px-4 py-12">
-    <h1 class="text-3xl md:text-4xl font-bold mb-8">全部分类</h1>
+    <h1 class="text-3xl md:text-4xl font-bold mb-8" data-i18n="allCategories">全部分类</h1>
     <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
-      <a href="prompts.html#chatgpt" class="rounded-lg bg-pink-500 dark:bg-pink-700 text-white px-4 py-3 font-medium text-center hover:scale-105 transition">ChatGPT</a>
-      <a href="prompts.html#claude" class="rounded-lg bg-orange-400 dark:bg-orange-600 text-white px-4 py-3 font-medium text-center hover:scale-105 transition">Claude</a>
-      <a href="prompts.html#midjourney" class="rounded-lg bg-purple-500 dark:bg-purple-700 text-white px-4 py-3 font-medium text-center hover:scale-105 transition">Midjourney</a>
-      <a href="prompts.html#dall-e" class="rounded-lg bg-teal-400 dark:bg-teal-600 text-white px-4 py-3 font-medium text-center hover:scale-105 transition">DALL-E</a>
-      <a href="prompts.html#notionai" class="rounded-lg bg-yellow-400 dark:bg-yellow-600 text-white px-4 py-3 font-medium text-center hover:scale-105 transition">NotionAI</a>
-      <a href="prompts.html#tiangong" class="rounded-lg bg-cyan-400 dark:bg-cyan-600 text-white px-4 py-3 font-medium text-center hover:scale-105 transition">Tiangong</a>
-      <a href="prompts.html#veo3" class="rounded-lg bg-lime-500 dark:bg-lime-700 text-white px-4 py-3 font-medium text-center hover:scale-105 transition">Veo3</a>
-      <a href="prompts.html#gemini" class="rounded-lg bg-blue-400 dark:bg-blue-600 text-white px-4 py-3 font-medium text-center hover:scale-105 transition">Gemini</a>
-      <a href="prompts.html#cursor" class="rounded-lg bg-rose-400 dark:bg-rose-600 text-white px-4 py-3 font-medium text-center hover:scale-105 transition">Cursor</a>
-      <a href="prompts.html#copilot" class="rounded-lg bg-green-500 dark:bg-green-700 text-white px-4 py-3 font-medium text-center hover:scale-105 transition">Copilot</a>
-      <a href="prompts.html#jasper" class="rounded-lg bg-fuchsia-500 dark:bg-fuchsia-700 text-white px-4 py-3 font-medium text-center hover:scale-105 transition">Jasper</a>
-      <a href="prompts.html#grok" class="rounded-lg bg-red-400 dark:bg-red-600 text-white px-4 py-3 font-medium text-center hover:scale-105 transition">Grok</a>
-      <a href="prompts.html#stablediffusion" class="rounded-lg bg-indigo-500 dark:bg-indigo-700 text-white px-4 py-3 font-medium text-center hover:scale-105 transition">StableDiffusion</a>
-      <a href="prompts.html#trea" class="rounded-lg bg-amber-400 dark:bg-amber-600 text-white px-4 py-3 font-medium text-center hover:scale-105 transition">Trea</a>
-      <a href="prompts.html#example示例" class="rounded-lg bg-violet-500 dark:bg-violet-700 text-white px-4 py-3 font-medium text-center hover:scale-105 transition">Example:示例</a>
+      <a href="prompts.html#chatgpt" class="rounded-lg bg-pink-500 dark:bg-pink-700 text-white px-4 py-3 font-medium text-center hover:scale-105 transition" data-i18n="chatgpt">ChatGPT</a>
+      <a href="prompts.html#claude" class="rounded-lg bg-orange-400 dark:bg-orange-600 text-white px-4 py-3 font-medium text-center hover:scale-105 transition" data-i18n="claude">Claude</a>
+      <a href="prompts.html#midjourney" class="rounded-lg bg-purple-500 dark:bg-purple-700 text-white px-4 py-3 font-medium text-center hover:scale-105 transition" data-i18n="midjourney">Midjourney</a>
+      <a href="prompts.html#dall-e" class="rounded-lg bg-teal-400 dark:bg-teal-600 text-white px-4 py-3 font-medium text-center hover:scale-105 transition" data-i18n="dalle">DALL-E</a>
+      <a href="prompts.html#notionai" class="rounded-lg bg-yellow-400 dark:bg-yellow-600 text-white px-4 py-3 font-medium text-center hover:scale-105 transition" data-i18n="notionai">NotionAI</a>
+      <a href="prompts.html#tiangong" class="rounded-lg bg-cyan-400 dark:bg-cyan-600 text-white px-4 py-3 font-medium text-center hover:scale-105 transition" data-i18n="tiangong">Tiangong</a>
+      <a href="prompts.html#veo3" class="rounded-lg bg-lime-500 dark:bg-lime-700 text-white px-4 py-3 font-medium text-center hover:scale-105 transition" data-i18n="veo3">Veo3</a>
+      <a href="prompts.html#gemini" class="rounded-lg bg-blue-400 dark:bg-blue-600 text-white px-4 py-3 font-medium text-center hover:scale-105 transition" data-i18n="gemini">Gemini</a>
+      <a href="prompts.html#cursor" class="rounded-lg bg-rose-400 dark:bg-rose-600 text-white px-4 py-3 font-medium text-center hover:scale-105 transition" data-i18n="cursor">Cursor</a>
+      <a href="prompts.html#copilot" class="rounded-lg bg-green-500 dark:bg-green-700 text-white px-4 py-3 font-medium text-center hover:scale-105 transition" data-i18n="copilot">Copilot</a>
+      <a href="prompts.html#jasper" class="rounded-lg bg-fuchsia-500 dark:bg-fuchsia-700 text-white px-4 py-3 font-medium text-center hover:scale-105 transition" data-i18n="jasper">Jasper</a>
+      <a href="prompts.html#grok" class="rounded-lg bg-red-400 dark:bg-red-600 text-white px-4 py-3 font-medium text-center hover:scale-105 transition" data-i18n="grok">Grok</a>
+      <a href="prompts.html#stablediffusion" class="rounded-lg bg-indigo-500 dark:bg-indigo-700 text-white px-4 py-3 font-medium text-center hover:scale-105 transition" data-i18n="stablediffusion">StableDiffusion</a>
+      <a href="prompts.html#trea" class="rounded-lg bg-amber-400 dark:bg-amber-600 text-white px-4 py-3 font-medium text-center hover:scale-105 transition" data-i18n="trea">Trea</a>
+      <a href="prompts.html#example示例" class="rounded-lg bg-violet-500 dark:bg-violet-700 text-white px-4 py-3 font-medium text-center hover:scale-105 transition" data-i18n="example">Example:示例</a>
     </div>
   </main>
   <footer class="mt-16 py-6 text-center text-neutral-500 text-sm border-t border-neutral-200 dark:border-neutral-800">
