--- a/WebContent/about.html
+++ b/WebContent/about.html
@@ -40,7 +40,6 @@
       <div class="rounded-xl bg-neutral-100 dark:bg-neutral-800 p-6 shadow">
         <h2 class="font-semibold mb-2">项目简介</h2>
         <p class="mb-2">本项目致力于收集和整理各大AI平台的优质提示词，帮助用户高效使用AI工具，灵感来源于 <a href="https://prompts.chat/" class="text-blue-600 hover:underline">prompts.chat</a>。</p>
-        <p class="mb-2">界面设计参考苹果公司风格，支持明暗模式和中英文切换，适配多终端。</p>
         <p>欢迎贡献和反馈，共同完善AI提示词生态！</p>
       </div>
     </section>
@@ -50,7 +49,7 @@
         <h2 class="font-semibold mb-2">联系方式</h2>
         <p class="mb-2">如有建议、合作或反馈，欢迎通过以下方式联系我们：</p>
         <ul class="list-disc pl-6 text-neutral-700 dark:text-neutral-300">
-          <li>邮箱：<a href="mailto:ai-prompts@example.com" class="text-blue-600 hover:underline">ai-prompts@example.com</a></li>
+          <li>邮箱：<a href="yhz2243920916@gmail.com" class="text-blue-600 hover:underline">yhz2243920916@gmail.com</a></li>
           <li>GitHub：<a href="https://github.com/hanzhiyou/Awesome-Prompts" class="text-blue-600 hover:underline">hanzhiyou/Awesome-Prompts</a></li>
         </ul>
       </div>
