--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -86,8 +86,8 @@
     </div>
   </header>
   <main class="flex-1 flex flex-col items-center justify-center text-center px-4">
-    <h1 class="text-4xl md:text-5xl font-bold mt-16 mb-4" data-i18n="welcome">欢迎来到AI提示词大全</h1>
-    <p class="text-lg md:text-xl mb-8 max-w-2xl" data-i18n="desc">收录最全、最优质的AI提示词，助你玩转各大AI平台。</p>
+    <h1 class="text-4xl md:text-5xl font-bold mt-16 mb-4" data-i18n="welcome">欢迎来到<span class="neon-logo">Awesome Prompts</span></h1>
+    <p class="text-lg md:text-xl mb-8 max-w-2xl" data-i18n="desc">本项目致力于收集和整理各大AI平台的优质提示词。</p>
     <div class="w-full max-w-xl mb-8">
       <input type="text" class="w-full rounded-lg border border-neutral-200 dark:border-neutral-700 px-4 py-3 text-lg bg-neutral-50 dark:bg-neutral-800 focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="搜索提示词..." placeholder-i18n="search">
     </div>
