--- a/WebContent/settings.html
+++ b/WebContent/settings.html
@@ -88,14 +88,14 @@
   <main class="flex-1 max-w-3xl mx-auto px-4 py-12">
     <h1 class="text-3xl md:text-4xl font-bold mb-8" data-i18n="settings">设置</h1>
     <section class="mb-12">
-      <div class="rounded-xl bg-neutral-100 dark:bg-neutral-800 p-6 shadow flex flex-col gap-6">
+      <div class="rounded-2xl bg-neutral-100 dark:bg-neutral-800 p-10 shadow flex flex-col gap-10 min-w-[340px] md:min-w-[420px] max-w-full" style="font-size:1.25rem;">
         <div class="flex items-center justify-between">
-          <span>明暗模式</span>
-          <button onclick="toggleTheme()" class="px-4 py-2 rounded-lg bg-blue-600 text-white font-semibold hover:bg-blue-700 transition">切换</button>
+          <span data-i18n="themeMode">明暗模式</span>
+          <button onclick="toggleTheme()" class="px-4 py-2 rounded-lg bg-blue-600 text-white font-semibold hover:bg-blue-700 transition" data-i18n="switch">切换</button>
         </div>
         <div class="flex items-center justify-between">
-          <span>语言</span>
-          <button onclick="toggleLang()" class="px-4 py-2 rounded-lg bg-blue-600 text-white font-semibold hover:bg-blue-700 transition">切换</button>
+          <span data-i18n="language">语言</span>
+          <button onclick="toggleLang()" class="px-4 py-2 rounded-lg bg-blue-600 text-white font-semibold hover:bg-blue-700 transition" data-i18n="switch">切换</button>
         </div>
       </div>
     </section>
