在多个页面中添加自定义光标样式和脚本，同时将导航栏中的“提示词”链接更改为“探索”，以提升用户体验和界面一致性。

--- a/WebContent/about.html
+++ b/WebContent/about.html
@@ -8,6 +8,8 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="assets/js/theme.js" defer></script>
   <script src="assets/js/lang.js" defer></script>
+  <link href="assets/css/custom-cursor.css" rel="stylesheet">
+  <script src="assets/js/custom-cursor.js" defer></script>
   <style>
     .neon-logo {
       position: relative;
@@ -134,7 +136,7 @@
         <nav class="hidden md:flex gap-6 text-base">
           <a href="home.html" class="hover:text-blue-600" data-i18n="home">首页</a>
           <a href="category.html" class="hover:text-blue-600" data-i18n="category">分类</a>
-          <a href="prompts.html" class="hover:text-blue-600" data-i18n="prompts">提示词</a>
+          <a href="explore.html" class="hover:text-blue-600" data-i18n="explore">探索</a>
           <a href="about.html" class="text-blue-600 font-semibold" data-i18n="about">关于</a>
         </nav>
       </div>
