--- a/WebContent/category.html
+++ b/WebContent/category.html
@@ -8,6 +8,8 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="assets/js/theme.js" defer></script>
   <script src="assets/js/lang.js" defer></script>
+  <link href="assets/css/custom-cursor.css" rel="stylesheet">
+  <script src="assets/js/custom-cursor.js" defer></script>
   <style>
     .neon-logo {
       position: relative;
@@ -68,7 +70,7 @@
         <nav class="hidden md:flex gap-6 text-base">
           <a href="home.html" class="hover:text-blue-600" data-i18n="home">首页</a>
           <a href="category.html" class="text-blue-600 font-semibold" data-i18n="category">分类</a>
-          <a href="prompts.html" class="hover:text-blue-600" data-i18n="prompts">提示词</a>
+          <a href="explore.html" class="hover:text-blue-600" data-i18n="explore">探索</a>
           <a href="about.html" class="hover:text-blue-600" data-i18n="about">关于</a>
         </nav>
       </div>
@@ -87,22 +89,24 @@
   </header>
   <main class="flex-1 max-w-5xl mx-auto px-4 py-12">
     <h1 class="text-3xl md:text-4xl font-bold mb-8" data-i18n="allCategories">全部分类</h1>
-    <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
-      <a href="prompts.html#chatgpt" class="rounded-lg bg-pink-500 dark:bg-pink-700 text-white px-4 py-3 font-medium text-center hover:scale-105 transition" data-i18n="chatgpt">ChatGPT</a>
-      <a href="prompts.html#claude" class="rounded-lg bg-orange-400 dark:bg-orange-600 text-white px-4 py-3 font-medium text-center hover:scale-105 transition" data-i18n="claude">Claude</a>
-      <a href="prompts.html#midjourney" class="rounded-lg bg-purple-500 dark:bg-purple-700 text-white px-4 py-3 font-medium text-center hover:scale-105 transition" data-i18n="midjourney">Midjourney</a>
-      <a href="prompts.html#dall-e" class="rounded-lg bg-teal-400 dark:bg-teal-600 text-white px-4 py-3 font-medium text-center hover:scale-105 transition" data-i18n="dalle">DALL-E</a>
-      <a href="prompts.html#notionai" class="rounded-lg bg-yellow-400 dark:bg-yellow-600 text-white px-4 py-3 font-medium text-center hover:scale-105 transition" data-i18n="notionai">NotionAI</a>
-      <a href="prompts.html#tiangong" class="rounded-lg bg-cyan-400 dark:bg-cyan-600 text-white px-4 py-3 font-medium text-center hover:scale-105 transition" data-i18n="tiangong">Tiangong</a>
-      <a href="prompts.html#veo3" class="rounded-lg bg-lime-500 dark:bg-lime-700 text-white px-4 py-3 font-medium text-center hover:scale-105 transition" data-i18n="veo3">Veo3</a>
-      <a href="prompts.html#gemini" class="rounded-lg bg-blue-400 dark:bg-blue-600 text-white px-4 py-3 font-medium text-center hover:scale-105 transition" data-i18n="gemini">Gemini</a>
-      <a href="prompts.html#cursor" class="rounded-lg bg-rose-400 dark:bg-rose-600 text-white px-4 py-3 font-medium text-center hover:scale-105 transition" data-i18n="cursor">Cursor</a>
-      <a href="prompts.html#copilot" class="rounded-lg bg-green-500 dark:bg-green-700 text-white px-4 py-3 font-medium text-center hover:scale-105 transition" data-i18n="copilot">Copilot</a>
-      <a href="prompts.html#jasper" class="rounded-lg bg-fuchsia-500 dark:bg-fuchsia-700 text-white px-4 py-3 font-medium text-center hover:scale-105 transition" data-i18n="jasper">Jasper</a>
-      <a href="prompts.html#grok" class="rounded-lg bg-red-400 dark:bg-red-600 text-white px-4 py-3 font-medium text-center hover:scale-105 transition" data-i18n="grok">Grok</a>
-      <a href="prompts.html#stablediffusion" class="rounded-lg bg-indigo-500 dark:bg-indigo-700 text-white px-4 py-3 font-medium text-center hover:scale-105 transition" data-i18n="stablediffusion">StableDiffusion</a>
-      <a href="prompts.html#trea" class="rounded-lg bg-amber-400 dark:bg-amber-600 text-white px-4 py-3 font-medium text-center hover:scale-105 transition" data-i18n="trea">Trea</a>
-      <a href="prompts.html#example示例" class="rounded-lg bg-violet-500 dark:bg-violet-700 text-white px-4 py-3 font-medium text-center hover:scale-105 transition" data-i18n="example">Example:示例</a>
+    <div class="rounded-xl bg-neutral-100 dark:bg-neutral-800 p-6 shadow hover:shadow-lg transition mb-8">
+      <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
+        <a href="prompts.html#chatgpt" class="rounded-lg bg-pink-500 dark:bg-pink-700 text-white px-4 py-3 font-medium text-center hover:scale-105 transition" data-i18n="chatgpt">ChatGPT</a>
+        <a href="prompts.html#claude" class="rounded-lg bg-orange-400 dark:bg-orange-600 text-white px-4 py-3 font-medium text-center hover:scale-105 transition" data-i18n="claude">Claude</a>
+        <a href="prompts.html#midjourney" class="rounded-lg bg-purple-500 dark:bg-purple-700 text-white px-4 py-3 font-medium text-center hover:scale-105 transition" data-i18n="midjourney">Midjourney</a>
+        <a href="prompts.html#dall-e" class="rounded-lg bg-teal-400 dark:bg-teal-600 text-white px-4 py-3 font-medium text-center hover:scale-105 transition" data-i18n="dalle">DALL-E</a>
+        <a href="prompts.html#notionai" class="rounded-lg bg-yellow-400 dark:bg-yellow-600 text-white px-4 py-3 font-medium text-center hover:scale-105 transition" data-i18n="notionai">NotionAI</a>
+        <a href="prompts.html#tiangong" class="rounded-lg bg-cyan-400 dark:bg-cyan-600 text-white px-4 py-3 font-medium text-center hover:scale-105 transition" data-i18n="tiangong">Tiangong</a>
+        <a href="prompts.html#veo3" class="rounded-lg bg-lime-500 dark:bg-lime-700 text-white px-4 py-3 font-medium text-center hover:scale-105 transition" data-i18n="veo3">Veo3</a>
+        <a href="prompts.html#gemini" class="rounded-lg bg-blue-400 dark:bg-blue-600 text-white px-4 py-3 font-medium text-center hover:scale-105 transition" data-i18n="gemini">Gemini</a>
+        <a href="prompts.html#cursor" class="rounded-lg bg-rose-400 dark:bg-rose-600 text-white px-4 py-3 font-medium text-center hover:scale-105 transition" data-i18n="cursor">Cursor</a>
+        <a href="prompts.html#copilot" class="rounded-lg bg-green-500 dark:bg-green-700 text-white px-4 py-3 font-medium text-center hover:scale-105 transition" data-i18n="copilot">Copilot</a>
+        <a href="prompts.html#jasper" class="rounded-lg bg-fuchsia-500 dark:bg-fuchsia-700 text-white px-4 py-3 font-medium text-center hover:scale-105 transition" data-i18n="jasper">Jasper</a>
+        <a href="prompts.html#grok" class="rounded-lg bg-red-400 dark:bg-red-600 text-white px-4 py-3 font-medium text-center hover:scale-105 transition" data-i18n="grok">Grok</a>
+        <a href="prompts.html#stablediffusion" class="rounded-lg bg-indigo-500 dark:bg-indigo-700 text-white px-4 py-3 font-medium text-center hover:scale-105 transition" data-i18n="stablediffusion">StableDiffusion</a>
+        <a href="prompts.html#trea" class="rounded-lg bg-amber-400 dark:bg-amber-600 text-white px-4 py-3 font-medium text-center hover:scale-105 transition" data-i18n="trea">Trea</a>
+        <a href="prompts.html#example示例" class="rounded-lg bg-violet-500 dark:bg-violet-700 text-white px-4 py-3 font-medium text-center hover:scale-105 transition" data-i18n="example">Example:示例</a>
+      </div>
     </div>
   </main>
   <footer class="mt-16 py-6 text-center text-neutral-500 text-sm border-t border-neutral-200 dark:border-neutral-800">
