--- a/WebContent/prompt-detail.html
+++ b/WebContent/prompt-detail.html
@@ -8,6 +8,8 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="assets/js/theme.js" defer></script>
   <script src="assets/js/lang.js" defer></script>
+  <link href="assets/css/custom-cursor.css" rel="stylesheet">
+  <script src="assets/js/custom-cursor.js" defer></script>
 </head>
 <body class="bg-white dark:bg-neutral-900 text-neutral-900 dark:text-neutral-100 min-h-screen flex flex-col">
   <header class="backdrop-blur bg-white/80 dark:bg-neutral-900/80 border-b border-neutral-200 dark:border-neutral-800 sticky top-0 z-30">
@@ -17,7 +19,7 @@
         <nav class="hidden md:flex gap-6 text-base">
           <a href="home.html" class="hover:text-blue-600" data-i18n="home">首页</a>
           <a href="category.html" class="hover:text-blue-600" data-i18n="category">分类</a>
-          <a href="prompts.html" class="hover:text-blue-600" data-i18n="prompts">提示词</a>
+          <a href="explore.html" class="hover:text-blue-600" data-i18n="explore">探索</a>
           <a href="about.html" class="hover:text-blue-600" data-i18n="about">关于</a>
         </nav>
       </div>
