更新多个页面，调整布局和内容，增加新的AI平台提示词模块，优化用户界面和信息展示。

--- a/WebContent/explore.html
+++ b/WebContent/explore.html
@@ -88,8 +88,7 @@
     </div>
   </header>
   <main class="flex-1 max-w-5xl mx-auto px-4 py-12">
-    <h1 class="text-3xl md:text-4xl font-bold mb-8" data-i18n="explore">探索</h1>
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
       <div class="rounded-xl bg-neutral-100 dark:bg-neutral-800 p-6 shadow hover:shadow-lg transition flex flex-col">
         <h2 class="font-bold text-lg mb-2">ChatGPT 提示词</h2>
         <p class="mb-2 text-neutral-600 dark:text-neutral-300">高效提升对话体验的精选提示词。</p>
@@ -109,6 +108,61 @@
         <h2 class="font-bold text-lg mb-2">NotionAI 助手</h2>
         <p class="mb-2 text-neutral-600 dark:text-neutral-300">提升NotionAI效率的实用提示词。</p>
         <a href="prompt-detail.html?id=notionai" class="text-blue-600 hover:underline">查看详情</a>
+      </div>
+      <div class="rounded-xl bg-neutral-100 dark:bg-neutral-800 p-6 shadow hover:shadow-lg transition flex flex-col">
+        <h2 class="font-bold text-lg mb-2">DALL-E 创作</h2>
+        <p class="mb-2 text-neutral-600 dark:text-neutral-300">AI绘画与生成艺术的灵感提示词。</p>
+        <a href="prompt-detail.html?id=dalle" class="text-blue-600 hover:underline">查看详情</a>
+      </div>
+      <div class="rounded-xl bg-neutral-100 dark:bg-neutral-800 p-6 shadow hover:shadow-lg transition flex flex-col">
+        <h2 class="font-bold text-lg mb-2">StableDiffusion 灵感</h2>
+        <p class="mb-2 text-neutral-600 dark:text-neutral-300">AI图像生成的高质量提示词。</p>
+        <a href="prompt-detail.html?id=stablediffusion" class="text-blue-600 hover:underline">查看详情</a>
+      </div>
+      <div class="rounded-xl bg-neutral-100 dark:bg-neutral-800 p-6 shadow hover:shadow-lg transition flex flex-col">
+        <h2 class="font-bold text-lg mb-2">Grok 智能问答</h2>
+        <p class="mb-2 text-neutral-600 dark:text-neutral-300">Grok平台专用高效问答提示词。</p>
+        <a href="prompt-detail.html?id=grok" class="text-blue-600 hover:underline">查看详情</a>
+      </div>
+      <div class="rounded-xl bg-neutral-100 dark:bg-neutral-800 p-6 shadow hover:shadow-lg transition flex flex-col">
+        <h2 class="font-bold text-lg mb-2">Gemini 多模态</h2>
+        <p class="mb-2 text-neutral-600 dark:text-neutral-300">Gemini平台多模态AI提示词。</p>
+        <a href="prompt-detail.html?id=gemini" class="text-blue-600 hover:underline">查看详情</a>
+      </div>
+      <div class="rounded-xl bg-neutral-100 dark:bg-neutral-800 p-6 shadow hover:shadow-lg transition flex flex-col">
+        <h2 class="font-bold text-lg mb-2">Copilot 编程助手</h2>
+        <p class="mb-2 text-neutral-600 dark:text-neutral-300">AI辅助编程的高效提示词。</p>
+        <a href="prompt-detail.html?id=copilot" class="text-blue-600 hover:underline">查看详情</a>
+      </div>
+      <div class="rounded-xl bg-neutral-100 dark:bg-neutral-800 p-6 shadow hover:shadow-lg transition flex flex-col">
+        <h2 class="font-bold text-lg mb-2">Jasper 文案创作</h2>
+        <p class="mb-2 text-neutral-600 dark:text-neutral-300">AI文案与内容生成的优质提示词。</p>
+        <a href="prompt-detail.html?id=jasper" class="text-blue-600 hover:underline">查看详情</a>
+      </div>
+      <div class="rounded-xl bg-neutral-100 dark:bg-neutral-800 p-6 shadow hover:shadow-lg transition flex flex-col">
+        <h2 class="font-bold text-lg mb-2">Veo3 视频创作</h2>
+        <p class="mb-2 text-neutral-600 dark:text-neutral-300">AI视频生成的创意提示词。</p>
+        <a href="prompt-detail.html?id=veo3" class="text-blue-600 hover:underline">查看详情</a>
+      </div>
+      <div class="rounded-xl bg-neutral-100 dark:bg-neutral-800 p-6 shadow hover:shadow-lg transition flex flex-col">
+        <h2 class="font-bold text-lg mb-2">Trea AI助手</h2>
+        <p class="mb-2 text-neutral-600 dark:text-neutral-300">Trea平台专用高效提示词。</p>
+        <a href="prompt-detail.html?id=trea" class="text-blue-600 hover:underline">查看详情</a>
+      </div>
+      <div class="rounded-xl bg-neutral-100 dark:bg-neutral-800 p-6 shadow hover:shadow-lg transition flex flex-col">
+        <h2 class="font-bold text-lg mb-2">Cursor 编程助手</h2>
+        <p class="mb-2 text-neutral-600 dark:text-neutral-300">Cursor平台AI编程提示词。</p>
+        <a href="prompt-detail.html?id=cursor" class="text-blue-600 hover:underline">查看详情</a>
+      </div>
+      <div class="rounded-xl bg-neutral-100 dark:bg-neutral-800 p-6 shadow hover:shadow-lg transition flex flex-col">
+        <h2 class="font-bold text-lg mb-2">Tiangong 天工助手</h2>
+        <p class="mb-2 text-neutral-600 dark:text-neutral-300">天工平台专用AI提示词。</p>
+        <a href="prompt-detail.html?id=tiangong" class="text-blue-600 hover:underline">查看详情</a>
+      </div>
+      <div class="rounded-xl bg-neutral-100 dark:bg-neutral-800 p-6 shadow hover:shadow-lg transition flex flex-col">
+        <h2 class="font-bold text-lg mb-2">Example: 示例</h2>
+        <p class="mb-2 text-neutral-600 dark:text-neutral-300">各类AI平台的示例提示词。</p>
+        <a href="prompt-detail.html?id=example" class="text-blue-600 hover:underline">查看详情</a>
       </div>
     </div>
   </main>
