--- a/WebContent/home.html
+++ b/WebContent/home.html
@@ -127,7 +127,7 @@
     </div>
   </header>
   <main class="flex-1 max-w-5xl mx-auto px-4 py-12">
-    <h1 class="text-3xl md:text-4xl font-bold mb-8" data-i18n="home">首页</h1>
+    <h1 class="text-3xl md:text-4xl font-bold mb-8" data-i18n="search">Search</h1>
     <!-- AI Based Prompts Search 独立模块 -->
     <section class="mb-12">
       <div class="rounded-xl bg-neutral-100 dark:bg-neutral-800 p-6 shadow hover:shadow-lg transition flex flex-col items-center max-w-2xl mx-auto">
@@ -137,7 +137,7 @@
     </section>
     <!-- 热门推荐 独立模块 -->
     <section class="mb-12">
-      <h2 class="text-2xl font-semibold mb-4" data-i18n="popular">热门推荐</h2>
+      <h2 class="text-3xl md:text-4xl font-bold mb-4" data-i18n="popular">热门推荐</h2>
       <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
         <div class="rounded-xl bg-neutral-100 dark:bg-neutral-800 p-6 shadow hover:shadow-lg transition flex flex-col">
           <h3 class="font-bold text-lg mb-2">ChatGPT 提示词</h3>
@@ -153,7 +153,7 @@
     </section>
     <!-- 分类入口 独立模块 -->
     <section>
-      <h2 class="text-2xl font-semibold mb-4" data-i18n="category_entry">分类入口</h2>
+      <h2 class="text-3xl md:text-4xl font-bold mb-4" data-i18n="category_entry">分类入口</h2>
       <div class="rounded-xl bg-neutral-100 dark:bg-neutral-800 p-6 shadow hover:shadow-lg transition mb-8">
         <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
           <a href="prompts.html#chatgpt" class="rounded-lg bg-pink-500 dark:bg-pink-700 text-white px-4 py-3 font-medium text-center hover:scale-105 transition">ChatGPT</a>
