--- a/WebContent/about.html
+++ b/WebContent/about.html
@@ -153,12 +153,11 @@
       </div>
     </div>
   </header>
-  <main class="flex-1 max-w-3xl mx-auto px-4 py-12">
+  <main class="flex-1 max-w-5xl mx-auto px-4 py-12">
     <h1 class="text-3xl md:text-4xl font-bold mb-8" data-i18n="about">关于</h1>
     <section class="mb-12">
       <div class="rounded-xl bg-neutral-100 dark:bg-neutral-800 p-6 shadow">
-        <h2 class="font-semibold mb-2">项目简介</h2>
-        <p class="mb-2">本项目致力于收集和整理各大AI平台的优质提示词，帮助用户高效使用AI工具，灵感来源于 <a href="https://prompts.chat/" class="text-blue-600 hover:underline">prompts.chat</a>。</p>
+        <p class="mb-2">本项目致力于收集和整理各大AI平台的优质提示词，帮助用户高效使用AI工具。</p>
         <p>欢迎贡献和反馈，共同完善AI提示词生态！</p>
       </div>
     </section>
