添加contributor卡片，修复create界面添加带来的bug

--- a/WebContent/about.html
+++ b/WebContent/about.html
@@ -174,8 +174,16 @@
           <a href="https://github.com/ThineLord" target="_blank" rel="noopener noreferrer" class="font-bold text-lg mb-1 text-blue-700 dark:text-blue-300 font-serif contributor-name">Hanz</a>
           <div class="text-neutral-500 text-sm" data-i18n="initiator">项目发起人</div>
         </div>
+        <!-- Wenao卡片 -->
+        <div class="backdrop-blur bg-white/40 dark:bg-neutral-800/40 border border-white/30 dark:border-neutral-700 rounded-2xl shadow-lg p-6 flex flex-col items-center transition-transform duration-200 hover:scale-105 hover:shadow-2xl relative contributor-card contributor-card-main">
+          <div class="w-20 h-20 rounded-full overflow-hidden mb-4 border-4 border-white/60 shadow-lg relative">
+            <img src="assets/img/Wenao-avatar.png" alt="Wenao" class="w-full h-full object-cover">
+            <div class="absolute inset-0 pointer-events-none" style="box-shadow:0 0 32px 8px rgba(128,0,255,0.18);"></div>
+          </div>
+          <a href="https://github.com/zzzwenao" target="_blank" rel="noopener noreferrer" class="font-bold text-lg mb-1 text-blue-700 dark:text-blue-300 font-serif contributor-name">Wenao</a>
+          <div class="text-neutral-500 text-sm" data-i18n="contributor">贡献者</div>
+        </div>
         <!-- 空卡片 -->
-        <div class="backdrop-blur bg-white/30 dark:bg-neutral-800/30 border border-white/20 dark:border-neutral-700 rounded-2xl shadow p-6 flex flex-col items-center opacity-60 contributor-card contributor-card-gold"></div>
         <div class="backdrop-blur bg-white/30 dark:bg-neutral-800/30 border border-white/20 dark:border-neutral-700 rounded-2xl shadow p-6 flex flex-col items-center opacity-60 contributor-card contributor-card-gold"></div>
         <div class="backdrop-blur bg-white/30 dark:bg-neutral-800/30 border border-white/20 dark:border-neutral-700 rounded-2xl shadow p-6 flex flex-col items-center opacity-60 contributor-card contributor-card-gold"></div>
       </div>
